TinyMUX 2.6:  CHANGES
Last Update:  October 2006

Major changes that may affect performance and require softcode tweaks:
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 -- Deprecated LSTACK(), POP(), PUSH(), PEEK(), EMPTY(), and ITEMS().
    These functions are still available via the --enabled-deprecated
    configuration switch.  Requested by Ian.
 -- Port code to the 64-bit edition of Windows XP.  Jake and Brazil.


Feature Additions:
~~~~~~~~~~~~~~~~~
 -- FCOUNT(<expression>) to tally function invocations in <expression>.
    Requested by Ian.
 -- Add SITEINFO() to return the site flags for a player or port.  Added
    by Jake.
 -- Use Moniker instead of name in enter/leave emits, rob, kill, @toad,
    boot, and in other similar situations.
 -- Add support for %=<attr> substitution. From TinyMUSH 3.
 -- Use localtime_r() if available. By Brazil.
 -- Added command line switch (-n) to control choice of networking
    method on Win32.
 -- Added support for 2-argument mix().
 -- Added optional third 'step' parameter to lnum().
 -- Added optional second argument for lcon() for subseting the returned
    list by type.
 -- The 'You own a floating room' message is only given for rooms which
    are not connected to either the player_startint_room or to a room
    marked FLOATING. Previously, every room not connected to the
    player_starting_room had to be marked FLOATING.
 -- Added QUELL flag from Firan to temporarily suppressWizard powers.
 -- Added @switch/notify.
 -- Merge Firan MUX source modification and collected them under the
    --enable-firanmux ./configuration switch. This also typically
    requires the --enable-memorybased switch. Some of the following
    may eventually be enabled in the default build:

    Attributes:  @alead, @lead, @olead, and @color
    Permissions: no_immobile, no_restricted
    Options:     immobile_message, sql_server, sql_user, sql_password,